# LaWea

./: ..gitignore 2.icloud  .gitignore  AUTHORS.md  README.md
Examples/: factorial.lw  fibonacci.lw  hello-world.lw
Interpreters/C/: CMakeLists.txt  Makefile  la_weá_interpreter.c  la_weá_interpreter.h  main.c  utf32.c  utf32.h  utf8_utf32.c  utf8_utf32.h
Interpreters/C++/: CMakeLists.txt  Makefile  la_weá_interpreter.cpp  la_weá_interpreter.hpp  main.cpp  utf8_utf32_utility.cpp  utf8_utf32_utility.hpp
Interpreters/C++/include/: la_weá_interpreter.hpp
Interpreters/C++/include/la_wea_interpreter/: command.hpp  interpreter.hpp  la_weá_command.hpp  la_weá_interpreter.hpp
Interpreters/C++/include/utf_utils/: utf_utils.hpp
Interpreters/C++/src/: CMakeLists.txt  la_weá_interpreter.cpp  main.cpp
Interpreters/C++/src/lib/: .CMakeLists.txt.swp  CMakeLists.txt
Interpreters/C++/src/lib/la_wea_interpreter/: code_parser.cpp  code_parser.hpp  context.cpp  context.hpp  exception.cpp  exception.hpp  exceptions.cpp  exceptions.hpp  expression.cpp  expression.hpp  expression_factory.cpp  expression_factory.hpp  expressions.cpp  expressions.hpp  interpreter.cpp  la_weá_code_parser.cpp  la_weá_code_parser.hpp  la_weá_context.cpp  la_weá_context.hpp  la_weá_exception.cpp  la_weá_exception.hpp  la_weá_expression.cpp  la_weá_expression.hpp  la_weá_interpreter.cpp  la_weá_program_expression.cpp  la_weá_program_expression.hpp  program_expression.cpp  program_expression.hpp
Interpreters/C++/src/lib/laweainterpreter++/: CMakeLists.txt
Interpreters/C++/src/lib/laweainterpreter++/include/laweainterpreter++/: command.hpp  interpreter.hpp
Interpreters/C++/src/lib/laweainterpreter++/lib/utfutils/: CMakeLists.txt
Interpreters/C++/src/lib/laweainterpreter++/lib/utfutils/include/utfutils/: utf_utils.hpp
Interpreters/C++/src/lib/laweainterpreter++/lib/utfutils/src/: utf_utils.cpp
Interpreters/C++/src/lib/laweainterpreter++/src/: code_parser.cpp  code_parser.hpp  context.cpp  context.hpp  exception.hpp  exceptions.hpp  expression.hpp  expression_factory.cpp  expression_factory.hpp  expressions.cpp  expressions.hpp  interpreter.cpp  program_expression.cpp  program_expression.hpp
Interpreters/C++/src/lib/utf_utils/: utf_utils.cpp
Interpreters/C++/src/libs/: CMakeLists.txt
Interpreters/C++/src/libs/la_wea_interpreter/: CMakeLists.txt  la_weá_interpreter.cpp
Interpreters/C++/src/libs/utf8_utf32_utility/: CMakeLists.txt
Interpreters/C/include/la_wea_interpreter/: la_weá_command_t.h  la_weá_interpreter.h
Interpreters/C/include/utf_utils/: utf_utils.h
Interpreters/C/src/: CMakeLists.txt  la_weá_interpreter.c  main.c
Interpreters/C/src/include/la_wea_interpreter/: la_weá_command_t.h  la_weá_interpreter.h
Interpreters/C/src/include/utf_utils/: utf_utils.h
Interpreters/C/src/lib/: CMakeLists.txt
Interpreters/C/src/lib/la_wea_interpreter/: execute_commands.c  execute_commands.h  get_code.c  get_code.h  interpret_commands.c  interpret_commands.h  la_weá_interpreter.c  parse_code.c  parse_code.h
Interpreters/C/src/lib/laweainterpreter/: CMakeLists.txt
Interpreters/C/src/lib/laweainterpreter/include/laweainterpreter/: la_weá_command_t.h  la_weá_interpreter.h
Interpreters/C/src/lib/laweainterpreter/lib/utfutils/: CMakeLists.txt
Interpreters/C/src/lib/laweainterpreter/lib/utfutils/include/utfutils/: utf_utils.h
Interpreters/C/src/lib/laweainterpreter/lib/utfutils/src/: utf_utils.c
Interpreters/C/src/lib/laweainterpreter/src/: get_code.c  get_code.h  interpret_commands.c  interpret_commands.h  la_weá_interpreter.c  la_weá_result_t.c  la_weá_result_t.h  parse_code.c  parse_code.h
Interpreters/C/src/lib/utf_utils/: utf_utils.c
Interpreters/C/src/libs/: CMakeLists.txt
Interpreters/C/src/libs/la_wea_interpreter/: CMakeLists.txt  la_weá_interpreter.c
Interpreters/C/src/libs/utf8_utf32/: CMakeLists.txt
Interpreters/Python3/: lawea.py
Interpreters/Swift/: La Weá Interpreter.swift  LaWeáInterpreter.swift  Makefile  Package.swift  main.swift
Interpreters/Swift/src/: LaWeáInterpreter.swift  main.swift
Interpreters/Swift/src/LaWeáInterpreter/: File.swift
Interpreters/Swift/src/lib/LaWeáInterpreter/: LaWeáCodeParser.swift  LaWeáCommand.swift  LaWeáContext.swift  LaWeáError.swift  LaWeáExpression.swift  LaWeáExpressionFactory.swift  LaWeáInterpreter.swift  LaWeáProgramExpression.swift  expressions.swift
Interpreters/Web/: package-lock.json  package.json  tsconfig.json
Interpreters/Web/public/: index.html  run_commands.wasm  run_commands_worker.js  run_commands_worker.wasm
Interpreters/Web/src/: main.ts
Interpreters/Web/src/LaWeá/: index.ts
Interpreters/Web/src/LaWeá/lib/: CodeParser.ts  Command.ts  CustomError.ts  Interpreter.ts  LaWeá.ts  Module.ts  errors.ts
Interpreters/Web/src/LaWeá/wasm/: run_commands.d.ts  run_commands.js
Interpreters/Web/src/LaWeá/wasm/C/: run_commands.c  run_commands.h  run_commands_worker.c  utf_utils.c  utf_utils.h
Interpreters/Web/src/components/App/: App.css  App.scss  App.ts  App.vue
Interpreters/Web/src/components/TheCodeEditor/: TheCodeEditor.css  TheCodeEditor.scss  TheCodeEditor.ts  TheCodeEditor.vue
Interpreters/Web/src/components/TheErrorModal/: TheErrorModal.ts  TheErrorModal.vue
Interpreters/Web/src/components/TheFooterSection/: TheFooterSection.ts  TheFooterSection.vue
Interpreters/Web/src/components/TheHeaderSection/: TheHeaderSection.css  TheHeaderSection.scss  TheHeaderSection.ts  TheHeaderSection.vue
Interpreters/Web/src/components/TheInputManager/: TheInputManager.ts  TheInputManager.vue
Interpreters/Web/src/components/TheMainSection/: LaWeáInterpreter.ts  TheMainSection.ts  TheMainSection.vue  run_commands.c  run_commands.d.ts  run_commands.h  run_commands.js  run_commands_worker.c  utf8_utf32.c  utf8_utf32.h
Interpreters/Web/src/components/TheMainSection/worker/: run_commands.c  run_commands_worker.c  utf8_utf32.c  utf8_utf32.h
Interpreters/Web/src/components/TheOutputManager/: TheOutputManager.ts  TheOutputManager.vue
Sublime Text/: La Weá.sublime-completions  La Weá.sublime-syntax
(+3 files in other folders)
